fix: z-index negativo para definição do background e pequeno ajuste no padding dos ícones das redes sociais

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -53,7 +53,7 @@ a:hover::before {
 
 .social_media img {
     height: 25px;
-    padding: 2px 3px;
+    padding: 3px 3px;
     width: 25px;
 }
 
