--- a/styles/page.css
+++ b/styles/page.css
@@ -10,6 +10,7 @@ main {
     position: fixed;
     height: 100%;
     width: 100%;
+    z-index: -1;
   }
 
 section {
@@ -22,5 +23,4 @@ section div {
     margin: 0 auto;
     height: 100vh;    
     width: 50%;
-    z-index: 1;
 }
